--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-type-animation": "^3.2.0",
     "resend": "^3.1.0"
   },
